Modified code for Article
