# backend/app/Http/Controllers/ArticleController.php
@@ -30,12 +30,31 @@ class ArticleController extends Controller
      *     path="/api/articles",
      *     summary="Home Page Initial",
      *     tags={"Articles"},
-     * 
-     *     @OA\Parameter(name="articleTitle",in="query",description="Filter articles by title",required=false,@OA\Schema(type="string")),
-     *     @OA\Parameter(name="displayNumber",in="query",description="Number of articles per page",required=false,@OA\Schema(type="integer", default=5)),
-     *     @OA\Parameter(name="pageNumber",in="query",description="Page number for pagination",required=false,@OA\Schema(type="integer", default=1)),
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Parameter(
+     *         name="articleTitle",
+     *         in="query",
+     *         description="Filter articles by title",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="displayNumber",
+     *         in="query",
+     *         description="Number of articles per page",
+     *         required=false,
+     *         @OA\Schema(type="integer", default=5)
+     *     ),
+     *     @OA\Parameter(
+     *         name="pageNumber",
+     *         in="query",
+     *         description="Page number for pagination",
+     *         required=false,
+     *         @OA\Schema(type="integer", default=1)
+     *     ),
      * 
      *     @OA\Response(response=200, description="List of Articles"),
+     *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=500, description="Internal Server Error"),
      * )
      */
@@ -44,6 +63,7 @@ class ArticleController extends Controller
         $homePageData = $this->articleService->getHomePageData($request);
         return response()->json($homePageData);
     }
+
 
     public function articleCreate(Request $request)
     {
