# backend/routes/api.php
@@ -21,9 +21,16 @@ Route::middleware([RedirectIfAuthenticated::class])->group(function () {
 });
 
 Route::middleware(['auth:sanctum'])->group(function () {
-    // Dashboard
-    Route::get('/dashboard', [UserController::class, 'dashboard']);
-    
+    // Articles routes
+    Route::prefix('/articles')->group(function () {
+        // Normal Routes
+        Route::get('/', [ArticleController::class, 'homePageInitial']); // Get all articles
+        Route::get('/{articleId}', [ActionController::class, 'articlePageInitial']);
+        Route::post('/like', [ActionController::class, 'articleLike']);
+        Route::post('/comment', [ActionController::class, 'articleComment']);
+        Route::post('/draft-list', [ArticleController::class, 'draftArticleList']); // draft article list
+        Route::post('/create', [ArticleController::class, 'articleCreate']); // create an article
+    });
     
 
     // Category routes
@@ -35,16 +42,7 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::prefix('user')->group(function () {
     });
 });
-// Articles routes
-Route::prefix('/articles')->group(function () {
-    // Normal Routes
-    Route::get('/', [ArticleController::class, 'homePageInitial']); // Get all articles
-    Route::get('/{articleId}', [ActionController::class, 'articlePageInitial']);
-    Route::post('/like', [ActionController::class, 'articleLike']);
-    Route::post('/comment', [ActionController::class, 'articleComment']);
-    Route::post('/draft-list', [ArticleController::class, 'draftArticleList']); // draft article list
-    Route::post('/create', [ArticleController::class, 'articleCreate']); // create an article
-});
+
 Route::post('upload', [FileController::class, 'upload']);
 Route::get('download/{fileName}', [FileController::class, 'downloadAsZip']);
 Route::get('/list-files', [FileController::class, 'listFiles']); // New route
